--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -305,7 +305,8 @@
             "Title" : "Popular Album"
           },
           "TopSongs": {
-            "Title" : "Your Top Song"
+            "Title" : "Your Top Song",
+            "EmptyState": "Oops! We couldn't find your top song.Publish your song and interact to make your own cult!"
           },
           "Listener": {
             "Title" : "Listener Country"
