--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -271,6 +271,7 @@
           "TopFans": {
             "Title" : "Your Top Fans",
             "Link" : "View All",
+            "Hide" : "Hide",
             "FullScreen": "Your Fans",
             "EmptyState": "Oops! We couldn't find any Top fans for you. Post some story or release album to make your own cult!"
          
@@ -324,7 +325,8 @@
             "EmptyState": "Oops! We couldn't find your top song.Publish your song and interact to make your own cult!"
           },
           "Listener": {
-            "Title": "Listener Country"
+            "Title": "Listener Country",
+            "EmptyState": "Oops! We couldn't find any of your listener country. Release song or album to make your own cult!"
           },
           "ListenerLikes": {
             "Title": "Listener Also Like"
