update link on popular album

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -318,7 +318,8 @@
             }
           },
           "PopularAlbum": {
-            "Title": "Popular Album"
+            "Title": "Popular Album",
+            "Link": "Explore Your Album"
           },
           "TopSongs": {
             "Title" : "Your Top Song",
