BEAM-476: Add new translations

--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -825,7 +825,9 @@
         "Suggest": "改進建議",
         "TextSuggest": "此應用程式的新想法或需要加強的功能",
         "Help": "Help",
-        "TextHelp": "If you want to know more contact us"
+        "TextHelp": "If you want to know more contact us",
+        "SendAppeal": "Send Appeal",
+        "TextSendAppeal": "Request account or content recovery"
       },
       "Placeholder": {
         "Email": "輸入你的電郵",
