--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -826,7 +826,9 @@
         "Suggest": "Suggest an Improvement",
         "TextSuggest": "New ideas or desired enhancement for this app",
         "Help": "Help",
-        "TextHelp": "If you want to know more contact us"
+        "TextHelp": "If you want to know more contact us",
+        "SendAppeal": "Send Appeal",
+        "TextSendAppeal": "Request account or content recovery"
       },
       "Placeholder": {
         "Email": "Enter your email",
