--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -271,7 +271,7 @@
           "TopFans": {
             "Title": "Your Top Fans",
             "Link": "View All",
-            "Hide" : "Hide",
+            "Hide": "Hide",
             "FullScreen": "Your Fans",
             "EmptyState": "Oops! We couldn't find any Top fans for you. Post some story or release album to make your own cult!"
           },
@@ -288,12 +288,12 @@
         },
         "Post": {
           "Title": "Post",
-          "Popular":{
-            "Title" : "Popular Post",
-            "EmptyState":"Oops! We couldn't find your popular post. Post your story and interact to make your own cult!"
+          "Popular": {
+            "Title": "Popular Post",
+            "EmptyState": "Oops! We couldn't find your popular post. Post your story and interact to make your own cult!"
           },
           "Engagement": {
-            "Title" : "Post Engagement Rate",
+            "Title": "Post Engagement Rate",
             "AvgView": "Avg view per post",
             "AvgLiked": "Avg liked per post",
             "AvgReply": "Avg reply per post",
@@ -324,7 +324,7 @@
             "EmptyState": "Oops! We couldn't find your popular album. Release song or album to make your own cult!"
           },
           "TopSongs": {
-            "Title" : "Your Top Song",
+            "Title": "Your Top Song",
             "EmptyState": "Oops! We couldn't find your top song. Publish your song and interact to make your own cult!"
           },
           "Listener": {
@@ -333,7 +333,7 @@
           },
           "ListenerLikes": {
             "Title": "Listener Also Like",
-            "EmptyState":"Oops! We couldn't find any of your listener. Release song or album to make your own cult!"
+            "EmptyState": "Oops! We couldn't find any of your listener. Release song or album to make your own cult!"
           },
           "MySong": {
             "Title": "My Song",
@@ -783,7 +783,7 @@
         "Invalid": "Referral code invalid"
       },
       "OnBoard": {
-        "Title": "Scan QR Code to Earn Bonuses!",
+        "Title": "Scan referral code by pressing scan now button, to earn some free stuff and bonuses",
         "Subtitle": "Scan referral code by pressing scan now button, to earn some free stuff and bonuses",
         "Activated": "Your 5% Comission for every transaction have been activated!",
         "SuccessTitle": "Your scan was successful!",
@@ -800,6 +800,11 @@
         "Title": "Scan QR Code",
         "Desc": "Referral Code invalid, Scan another QR Code",
         "Btn": "Dismiss"
+      },
+      "ShareQR": {
+        "Subtitle": "Share this QR code to let others know the Beamco profile",
+        "BtnShare": "Share QR Code",
+        "BtnBack": "Back"
       }
     },
     "Language": {
