--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -271,7 +271,7 @@
           "TopFans": {
             "Title": "Your Top Fans",
             "Link": "View All",
-            "Hide" : "Hide",
+            "Hide": "Hide",
             "FullScreen": "Your Fans",
             "EmptyState": "Oops! We couldn't find any Top fans for you. Post some story or release album to make your own cult!"
           },
@@ -288,12 +288,12 @@
         },
         "Post": {
           "Title": "郵政",
-          "Popular":{
-            "Title" : "Popular Post",
-            "EmptyState":"Oops! We couldn't find your popular post. Post your story and interact to make your own cult!"
+          "Popular": {
+            "Title": "Popular Post",
+            "EmptyState": "Oops! We couldn't find your popular post. Post your story and interact to make your own cult!"
           },
           "Engagement": {
-            "Title" : "Post Engagement Rate",
+            "Title": "Post Engagement Rate",
             "AvgView": "Avg view per post",
             "AvgLiked": "Avg liked per post",
             "AvgReply": "Avg reply per post",
@@ -333,7 +333,7 @@
           },
           "ListenerLikes": {
             "Title": "Listener Also Like",
-            "EmptyState":"Oops! We couldn't find any of your listener. Release song or album to make your own cult!"
+            "EmptyState": "Oops! We couldn't find any of your listener. Release song or album to make your own cult!"
           },
           "MySong": {
             "Title": "My Song",
@@ -799,6 +799,11 @@
         "Title": "Scan QR Code",
         "Desc": "Referral Code invalid, Scan another QR Code",
         "Btn": "Dismiss"
+      },
+      "ShareQR": {
+        "Subtitle": "Share this QR code to let others know the Beamco profile",
+        "BtnShare": "Share QR Code",
+        "BtnBack": "Back"
       }
     },
     "Language": {
