add something for the report

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -942,7 +942,8 @@
     },
     "Dropdown":{
       "Visit": "Visit Profile",
-      "Report": "Report"
+      "Report": "Report",
+      "ReportSent": "Report Sent!"
     }
   },
   "Notification": {
