BEAM-650: Change Menu Bar Name & Ordering Tab in Analytic

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -310,7 +310,7 @@
           }
         },
         "Album": {
-          "Title": "Album",
+          "Title": "My Music",
           "Filter": {
             "Range": {
               "Alltime": "All Time",
