--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -200,7 +200,8 @@
         "Tip": "Send Tip",
         "Queue": "Add to Queue",
         "Share": "Share Music",
-        "Details": "Show Details"
+        "Details": "Show Details",
+        "Credits": "Show Credits"
       },
       "TopPost": {
         "Title": "Top Post",
@@ -538,7 +539,9 @@
       "Album": "Album",
       "Merch": "Merch",
       "Exclusive": "Exclusive Daily Content",
-      "Musicians": "People who might fit your interest"
+      "Musicians": "People who might fit your interest",
+      "MyAlbum": "My Album",
+      "AppearsOn": "Appears On"
     },
     "Tab": {
       "Profile": "PROFILE",
