--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -677,6 +677,11 @@
     },
     "Shipping": {
       "Title": "Shipping Information",
+      "AddNewAddress": "+ Add New Address",
+      "MainAddress": "Main Address",
+      "New": "New",
+      "EditAddress": "Edit Address",
+      "ChangeMainAddress": "Change Main Address",
       "Confirm": "Are you sure you want to save your shipping information?",
       "Confirm2": "Are you sure you want to save your shipping information and continue your progress?",
       "Label": {
@@ -698,7 +703,8 @@
         "Postal": "Add Postal Code",
         "City": "Select City",
         "Address": "Add Address"
-      }
+      },
+      "EmptyState": "You need to provide shipping information to receive your purchased merchandise. Please add a new address to your shipping information."
     },
     "Preference": {
       "Title": "Preferences",
