feat: update merch card

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -454,7 +454,7 @@
       "Details": "Details",
       "ComingSoon": {
         "Title": "Discover Ticket",
-        "Subtitle": "When musicians list tikcet, you’ll see them here"
+        "Subtitle": "When musicians list ticket, you’ll see them here"
       }
     },
     "Merch": {
