BEAM-648: Add translations shipping

--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -694,8 +694,18 @@
       "New": "New",
       "EditAddress": "Edit Address",
       "ChangeMainAddress": "Change Main Address",
-      "Confirm": "Are you sure you want to save your shipping information?",
       "Confirm2": "Are you sure you want to save your shipping information and continue your progress?",
+      "ConfirmChangeMainAddress": "Are you sure you want to change your main address?",
+      "AddAddress": "Add New Address",
+      "ConfirmAddAddress": "Are you sure you want to add new address?",
+      "ChangeAddress": "Change Address",
+      "ConfirmChangeAddress": "Are you sure you want to change your address?",
+      "DeleteAddress": "Delete Address",
+      "ConfirmDeleteAddress": "Are you sure you want to delete your address?",
+      "ToastMainAddress": "Your main address has been updated!",
+      "ToastAddAddress": "Address has been added!",
+      "ToastChangeAddress": "Address has been updated!",
+      "ToastDeleteAddress": "Address has been deleted!",
       "Label": {
         "Email": "電子郵件",
         "Phone": "電話號碼",
