feat: update wording tab event musician profile

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -567,7 +567,7 @@
       "Fans": "FANS",
       "Merchandise": "MERCHANDISE",
       "Ticket": "TICKET",
-      "Event": "EVENT"
+      "Event": "LIVE"
     }
   },
   "ExclusiveContent": {
