--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -567,7 +567,7 @@
       "Fans": "樂迷",
       "Merchandise": "MERCHANDISE",
       "Ticket": "TICKET",
-      "Event": "EVENT"
+      "Event": "LIVE"
     }
   },
   "ExclusiveContent": {
