feat: slicing claim reward

--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -1470,5 +1470,11 @@
         "unblock": "Unblock"
       }
     }
+  },
+  "ClaimReward": {
+    "Title": "Reward Detail",
+    "ValidUntil": "Valid until",
+    "Claim": "Claim",
+    "Claimed": "Claimed"
   }
 }
