BEAM-799: Setup codepush

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Beamco for Artist</string>
     <string name="facebook_app_id">687852656020966</string>
     <string name="facebook_client_token">ea77058ba43ca99a7c661f0003857457</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">e5_xx7v9pnVF6t-m_hFK8VVbItDZnc3_3M5Oa</string>
 </resources>
