--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -113,7 +113,8 @@
     "Unset": "Unset",
     "Dismiss": "Dismiss",
     "Update": "Update",
-    "Continue": "Continue"
+    "Continue": "Continue",
+    "MyProfile": "My Profile"
   },
   "ForgotPassword": {
     "Title": "Update Your Password",
@@ -499,7 +500,11 @@
       "Home": "No live events are currently available at this time.\nStay tuned for exciting upcoming experiences!",
       "Title": "Discover Live Event",
       "Profile": "You have no events, your events will be displayed here",
-      "Other": "Currently, this musician don’t have any event."
+      "Other": "Currently, this musician don’t have any event.",
+      "TopTipper": {
+        "Title": "Top Tipper Will Displayed Here",
+        "Subtitle": "Wait until event goes live to view the top tipper"
+      }
     }
   },
   "Profile": {
