--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -21,7 +21,8 @@
     },
     "NoDescription": "No Description Given",
     "Required": "Required",
-    "Dismiss": "Dismiss"
+    "Dismiss": "Dismiss",
+    "BlockSucceed": "You've been blocked"
   },
   "Onboarding": {
     "Step1": {
@@ -1425,7 +1426,16 @@
     "BlockUI":{
       "isBlockCaption":"This comment is from the people you've been blocked visit user profile",
       "blockIsCaption":"You've been blocked by the people who replies this content visit user profile",
-      "linkCaption":"visit user profile"
+      "linkCaption":"visit user profile",
+      "isBlockedProfTitle": "is Blocked",
+      "isBlockedProfCaption":"They can't follow or view your post and you can't see replies or notification from",
+      "blockIsProfTitle":"You have been Blocked",
+      "blockIsProfCaption":"You can't see replies or notification from",
+      "unBlockTitle":"Are you sure to ublock",
+      "unBlockCaptionA":"by unblocking",
+      "unBlockCaptionB":"They will be able view your content, and you will see content or notification from",
+      "unblockButtonYes":"Unblock",
+      "unblockSuccess":"have been unblocked!"
     }
   }
 }
