handle block/unblock on fans profile

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1437,5 +1437,13 @@
       "unblockButtonYes":"Unblock",
       "unblockSuccess":"have been unblocked!"
     }
+  },
+  "Dropdown" :{
+    "Profile":{
+      "qr":"QR Code",
+      "share": "Share Profile",
+      "block":"Block",
+      "unblock": "Unblock"
+    }
   }
 }
