feat: wiring order list bookyay

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1359,7 +1359,8 @@
         "Newest": "Newest",
         "Oldest": "Oldest"
       }
-    }
+    },
+    "EmptyState": "Oops! you don’t have any transaction.\nYour transaction will be displayed here"
   },
   "Tracking": {
     "Title": "Track Status"
