change tab name

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -575,7 +575,7 @@
     "Tab": {
       "Profile": "PROFILE",
       "Main": "MAIN",
-      "Musician": "MUSICIAN",
+      "Musician": "POST",
       "Music": "MUSIC",
       "Fans": "FANS",
       "Merchandise": "MERCHANDISE",
