--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -575,7 +575,7 @@
     "Tab": {
       "Profile": "人資料",
       "Main": "MAIN",
-      "Musician": "MUSICIAN",
+      "Musician": "POST",
       "Music": "MUSIC",
       "Fans": "樂迷",
       "Merchandise": "MERCHANDISE",
