handle profile filter

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -433,6 +433,12 @@
       "Latest": "Latest",
       "Popular": "Popular"
     },
+    "FilterBy":{
+      "Title": "Filter by",
+      "All": "All",
+      "Exclusive": "Exclusive",
+      "Public": "Public"
+    },
     "NoMore": "No more feeds"
   },
   "Event": {
