feat : slicing swipe money & coin animation

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1496,5 +1496,8 @@
     "ValidUntil": "Valid until",
     "Claim": "Claim",
     "Claimed": "Claimed"
+  },
+  "LiveTipping": {
+    "SwipeUp": "Swipe Up To Tip"
   }
 }
