--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -434,7 +434,7 @@
       "Latest": "最新的",
       "Popular": "最新的"
     },
-    "FilterBy":{
+    "FilterBy": {
       "Title": "Filter by",
       "All": "All",
       "Exclusive": "Exclusive",
@@ -1498,6 +1498,8 @@
     "Claimed": "Claimed"
   },
   "LiveTipping": {
-    "SwipeUp": "Swipe Up To Tip"
+    "SwipeUp": "Swipe Up To Tip",
+    "TooFast": "You swipe to fast!",
+    "EnjoyShow": "Let’s enjoy the show\nand take a rest for few second"
   }
 }
