--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -748,6 +748,7 @@
       "ToastAddAddress": "Address has been added!",
       "ToastChangeAddress": "Address has been updated!",
       "ToastDeleteAddress": "Address has been deleted!",
+      "PhoneNumberInvalid": "Phone number is invalid, ensure phone number you've entered is correct",
       "Label": {
         "Email": "Email",
         "Phone": "Phone Number",
