--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -1210,7 +1210,12 @@
       "To": "To",
       "Date": "Date",
       "TransactionStatus": "Transaction Status",
-      "Notes": "Notes"
+      "Notes": "Notes",
+      "Status": {
+        "Pending": "Pending",
+        "Success": "Success",
+        "Rejected": "Rejected"
+      }
     },
     "EmptyState": {
       "Transaction": "The transaction list will be displayed here, but as of now, no transactions have been made.",
@@ -1234,7 +1239,8 @@
       "InputWithdrawalAmount": "Input Withdrawal Amount",
       "InputAmount": "Input Amount",
       "CreditToWithdraw": "Credit to Withdraw",
-      "TotalConversion": "Total Conversion"
+      "TotalConversion": "Total Conversion",
+      "ErrorMsg": "The minimum amount for withdraw is 5000 credits"
     },
     "AddBankAccount": {
       "Title": "Add Account",
@@ -1267,7 +1273,10 @@
       }
     },
     "EditBankAccount": {
-      "Title": "Edit Account"
+      "Title": "Edit Bank Account",
+      "ModalConfirm": {
+        "SubtitleEdit": "Are you sure your want to update your current Withdrawal Account?"
+      }
     },
     "DeleteBankAccount": {
       "ModalConfirm": {
@@ -1277,15 +1286,18 @@
     },
     "VerifCode": {
       "VerificationCode": "Verification Code",
-      "VerificationText": "We have sent you six digits verification code on address {{email}} check your inbox and enter verification code here"
+      "VerificationText": "We have sent you six digits verification code on address {{email}} check your inbox and enter verification code here",
+      "ResendAfter": "You can resend verification code after ",
+      "Rejected": "Please enter a valid verification code"
     },
     "ModalSuccess": {
       "Title": "Congratulations! \nYour withdrawal is being processed!",
       "SubtitleFirstTime": "Once we have verified your bank details your funds will be on their way! This process can usually take up to 7 working days.",
       "SubtitleNextWithdraw": "This can take up to 7 working days. You will receive your funds upon successful confirmation.",
-      "CreateWithdrawalAccount": "Your withdrawal account have been saved!",
-      "EditWithdrawalAccount": "Your account have been edited!",
-      "DeleteWithdrawalAccount": "Bank account has been deleted!"
+      "CreateWithdrawalAccount": "Your withdrawal account\nhave been saved!",
+      "EditWithdrawalAccount": "Your account\nhave been edited!",
+      "DeleteWithdrawalAccount": "Bank account\nhas been deleted!",
+      "ButtonText": "Back to credit"
     }
   },
   "RecoverAccount": {
